--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
 						 <tr class="table-row"data-href="https://www.credly.com/badges/3e472f8f-3dae-47d2-b12c-0771966ac9da/public_url"><td>Google Data Analytics Professional Certificate</td></tr>
 
  <tr><th>Google Certificates</th></tr>
-		<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/specialization/E97X3WB8J8BH"><td>Google Certificate -Google UX design</td></tr>
-						 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/professional-cert/K3X52CSDN47M"><td>Google Certificate -Google Data Analytics</td></tr>
+		<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/specialization/E97X3WB8J8BH"><td>Google UX design</td></tr>
+						 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/professional-cert/K3X52CSDN47M"><td>Google Data Analytics</td></tr>
 		<div>
    	     <table class='table table-bordered table-condensed table-striped table-hover'>
 		<tr><th>Google UX</th></tr></th></tr>
