--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ Iberian Camera Trap Project</td></tr>
 
    	     <table class='table table-bordered table-condensed table-striped table-hover'>
 
-		<tr class="table-row"data-href="https://photos.app.goo.gl/X8KHCjp4nxo4k89NA"><td> My Art Works</td></tr>		
+		<tr class="table-row"data-href="https://photos.app.goo.gl/X8KHCjp4nxo4k89NA"><td> My Art Works  -- Please Click Here</td></tr>		
 
 		</table>
 		</div>
