--- a/index.html
+++ b/index.html
@@ -254,14 +254,7 @@ Foundations of User Experience (UX) Design</td></tr>
 https://www.coursera.org/account/accomplishments/verify/L3MHEK5R949S"><td>
 Start the UX Design Process: Empathize, Define, and Ideate</td></tr>
 
-<tr><th>Coursera Certificates</th></tr>
-		<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/4CVUE87K6LB7"><td>
-Introduction to Generative AI </td></tr>
-<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/A5ZH8FXQYQAP"><td>
-Financial Markets </td></tr>
-<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/7CJ3PCQL5NWX"><td>
-Applied ChatGPT for Cybersecurity </td></tr>
-</tr>
+<tr><th>Google Data Analytics </th></tr>
 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/8TB3MTA28TCG"><td>
 Ask Questions to Make Data-Driven Decisions </td></tr>
 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/HEWD6VT5RUPN"><td>
@@ -278,6 +271,16 @@ Foundations: Data, Data, Everywhere </td></tr>
 Analyze Data to Answer Questions </td></tr>
 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/HNWCV58GJUEB"><td>
 Data Analysis with R Programming </td></tr>
+
+<tr><th>Coursera Certificates</th></tr>
+		<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/4CVUE87K6LB7"><td>
+Introduction to Generative AI </td></tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/A5ZH8FXQYQAP"><td>
+Financial Markets </td></tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/7CJ3PCQL5NWX"><td>
+Applied ChatGPT for Cybersecurity </td></tr>
+</tr>
+
 
 
 
