--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Rosemol Saju	</h1>
-      <p> I'm a <span class="typed" data-typed-items="Young Learner,  UX Engineer, Web developer"></span></p>
+      <p> I'm a <span class="typed" data-typed-items="Young Learner,  UX Engineer, Web developer, Data Analyst"></span></p>
     </div>
   </section><!-- End Hero -->
 
