--- a/index.html
+++ b/index.html
@@ -279,6 +279,10 @@ Introduction to Generative AI </td></tr>
 Financial Markets </td></tr>
 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/7CJ3PCQL5NWX"><td>
 Applied ChatGPT for Cybersecurity </td></tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/2F7KQ27CZRE7"><td>
+COVID-19 Contact Tracing </td></tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/7Q6AVZQQBRQK"><td>
+Introduction to Engineering Mechanics</td></tr>
 </tr>
 
 
