--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 		<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/specialization/E97X3WB8J8BH"><td>Google UX design</td></tr>
 						 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/professional-cert/K3X52CSDN47M"><td>Google Data Analytics</td></tr>
 
-						 <tr><th>Forage Certificates</th></tr>
+						 <tr><th>Forage Certificates (Virtual Internships)</th></tr>
 						 <tr class="table-row"data-href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/mastercard/DZxgGgvMB6cEtEyJg_Mastercard_iTqrmdzZztrYHdWho_1711556980447_completion_certificate.pdf"><td>MasterCard - Advisors Client Services Job Simulation</td></tr>
 						 <tr class="table-row"data-href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Accenture%20North%20America/hzmoNKtzvAzXsEqx8_Accenture%20North%20America_iTqrmdzZztrYHdWho_1712055114816_completion_certificate.pdf"><td>Accenture - Data Analytics and Visualization Job Simulation</td></tr>
 
