--- a/index.html
+++ b/index.html
@@ -218,12 +218,16 @@
 
 		<table class='table table-bordered table-condensed table-striped table-hover'>
 						 <tr><th>Credly Badges</th></tr>
+						 <tr class="table-row"data-href="https://www.credly.com/users/rosemol-saju/badges"><td>Credly Badges</td></tr>
+
 						 <tr class="table-row"data-href="https://www.credly.com/badges/2a3600cd-4a59-48bc-bc9c-005166df7acc/public_url"><td>Google UX Design Professional Certificate</td></tr>
 						 <tr class="table-row"data-href="https://www.credly.com/badges/3e472f8f-3dae-47d2-b12c-0771966ac9da/public_url"><td>Google Data Analytics Professional Certificate</td></tr>
+						 <tr class="table-row"data-href="https://www.credly.com/badges/f887494c-7e7f-48de-8043-3cfbef5a4adc/public_url"><td>Google Cybersecurity Certificate</td></tr>
 
  <tr><th>Google Certificates</th></tr>
 		<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/specialization/E97X3WB8J8BH"><td>Google UX design</td></tr>
-						 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/professional-cert/K3X52CSDN47M"><td>Google Data Analytics</td></tr>
+		<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/professional-cert/K3X52CSDN47M"><td>Google Data Analytics</td></tr>
+		<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/professional-cert/KTL4H6K2ZC6D"><td>Google Cybersecurity</td></tr>
 
 						 <tr><th>Forage Certificates (Virtual Internships)</th></tr>
 						 <tr class="table-row"data-href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/mastercard/DZxgGgvMB6cEtEyJg_Mastercard_iTqrmdzZztrYHdWho_1711556980447_completion_certificate.pdf"><td>MasterCard - Advisors Client Services Job Simulation</td></tr>
@@ -273,16 +277,58 @@ Analyze Data to Answer Questions </td></tr>
 Data Analysis with R Programming </td></tr>
 
 <tr><th>Coursera Certificates</th></tr>
-		<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/4CVUE87K6LB7"><td>
+		<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/4CVUE87K6LB7"><td>
 Introduction to Generative AI </td></tr>
-<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/A5ZH8FXQYQAP"><td>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/A5ZH8FXQYQAP"><td>
 Financial Markets </td></tr>
-<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/7CJ3PCQL5NWX"><td>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/7CJ3PCQL5NWX"><td>
 Applied ChatGPT for Cybersecurity </td></tr>
-<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/2F7KQ27CZRE7"><td>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/2F7KQ27CZRE7"><td>
 COVID-19 Contact Tracing </td></tr>
-<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/7Q6AVZQQBRQK"><td>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/7Q6AVZQQBRQK"><td>
 Introduction to Engineering Mechanics</td></tr>
+
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/7WUN4XDVQHKB"><td>
+Connect and Protect: Networks and Network Security</td></tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/MATCXH58H4YJ"><td>
+Tools of the Trade: Linux and SQL</td></tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/4PUFC93H3EB9"><td>
+Put It to Work: Prepare for Cybersecurity Jobs</td></tr>
+
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/CDCJ6FPENA4Q"><td>
+Automate Cybersecurity Tasks with Python</td></tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/YX67C4K9246E"><td>
+Assets, Threats, and Vulnerabilities</td></tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/MHWBQM8B4LFV"><td>
+Play It Safe: Manage Security Risks</td></tr>
+
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/QZVUSC5F5J38"><td>
+Foundations of Cybersecurity</td></tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/XLFX94C7UYTV"><td>
+Sound the Alarm: Detection and Response</td></tr>
+
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/94K9TMGXE2HX"><td>
+Foundations of Cybersecurity</td></tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/CWQVF7LSVCPF"><td>
+Introduction to Networking and Storage</td></tr>
+
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/RM9TFFUJ47P4"><td>
+Introduction to Software, Programming, and Databases</td></tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/7DSKW8SKWW8P"><td>
+Incident Response, BC, and DR Concepts</td></tr>
+
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/V4N66LJR6DG8"><td>
+Introduction to Hardware and Operating Systems</td></tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/726PW53A7JEK"><td>
+Security Principles</td></tr>
+
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/63L2S9URGF4K"><td>
+Introduction to Cloud Computing</td></tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/QT6H23DWCTRN"><td>
+Introduction to Cybersecurity Essentials</td></tr>
+ 
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/A5ZH8FXQYQAP"><td>
+Financial Markets - Awarded by Yale University</td></tr>
 </tr>
 
 
