--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ Foundations of Cybersecurity</td></tr>
 Sound the Alarm: Detection and Response</td></tr>
 
 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/94K9TMGXE2HX"><td>
-Foundations of Cybersecurity</td></tr>
+Introduction to Cybersecurity Careers</td></tr>
 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/CWQVF7LSVCPF"><td>
 Introduction to Networking and Storage</td></tr>
 
